<resources>

    <string name="aboutTitle">About</string>
    <string name="aboutHeader">Crystal Note</string>
    <string name="aboutAuthor">Chris Cruzen</string>
    <string name="aboutDescription">An aggressively minimalist, highly customizable notes app. 🤍</string>
    <string name="aboutButtonDeveloper">Developer Profile</string>
    <string name="aboutButtonPrivacy">Privacy Policy</string>

    <string name="appName">CrystalNote</string>
    <string name="appVersion">2.0.1</string>

    <string name="commonSave">Save</string>

    <string name="drawerHeader">Crystal Note</string>
    <string name="drawerMessage">A simple notes app</string>

    <string name="homeTitle">Notes</string>
    <string name="homeTextEmpty">Tap + to create a note.</string>

    <string name="homeOptionsTitle">Note List Options</string>
    <string name="homeOptionsShowArchived">Show Archived</string>

    <string name="navigationDrawerClosed">Navigation Drawer Closed</string>
    <string name="navigationDrawerOpened">Navigation Drawer Opened</string>

    <string name="noteListOlder">Older</string>
    <string name="noteListToday">Today</string>
    <string name="noteListLockIcon">Note locked</string>
    <string name="noteNewName">New Note</string>
    <string name="noteOptionsTitle">Note Options</string>
    <string name="noteOptionsLock">Lock</string>
    <string name="noteOptionsUnlock">Unlock</string>
    <string name="noteOptionsImport">Import</string>
    <string name="noteOptionsExport">Export</string>
    <string name="noteOptionsOpen">Open Note</string>
    <string name="noteOptionsRestore">Restore</string>
    <string name="noteOptionsArchive">Archive</string>
    <string name="noteOptionsUnarchive">Unarchive</string>
    <string name="noteOptionsDelete">Delete</string>

    <string name="passwordDialogHint">password</string>
    <string name="passwordDialogTitle">Set Password</string>

    <string name="selectTitle">Select a Note</string>
    <string name="selectTextEmpty">Tap + to create a note.</string>

    <string name="settingsTitle">App Settings</string>
    <string name="settingsAppAppearance">App Appearance</string>
    <string name="settingsAppTheme">Theme</string>
    <string name="settingsHomeAppearance">Home Appearance</string>
    <string name="settingsNotePreviewLines">Note Preview</string>
    <string name="settingsNoteDate">Note Date</string>
    <string name="settingsNoteColorBar">Show Note Color</string>
    <string name="settingsNoteThemeBar">Theme Note Color</string>
    <string name="settingsToday">Show Today Header</string>
    <string name="settingsHomeOptions">Show Note List Options</string>
    <string name="settingsNoteAppearance">Note Appearance</string>
    <string name="settingsUnderline">Show Underline</string>
    <string name="settingsScrollButton">Show Scroll Button on Long Notes</string>
    <string name="settingsColorOrb">Show Color Orb</string>
    <string name="settingsMonospace">Use Monospaced Font</string>

    <string name="toolbarOptionLock">Lock</string>
    <string name="toolbarOptionUnlock">Unlock</string>
    <string name="toolbarOptionExport">Export</string>
    <string name="toolbarOptionRevert">Revert</string>
    <string name="toolbarOptionImport">Import</string>
    <string name="toolbarOptionDelete">Delete</string>
    <string name="toolbarOptionOpenNote">Open Note</string>

    <string name="widgetSettingsIconContrast">Toggle Preview Background Brightness</string>
    <string name="widgetSettingsAppearanceHeader">Widget Appearance</string>
    <string name="widgetSettingsSelectionLabel">Selected Widget</string>
    <string name="widgetSettingsBackgroundColorLabel">Background Color</string>
    <string name="widgetSettingsTitleColorLabel">Title Color</string>
    <string name="widgetSettingsContentColorLabel">Content Color</string>
    <string name="widgetSettingsTextSizeLabel">Text Size</string>
    <string name="widgetSettingsBackgroundAlphaLabel">Background Transparency</string>
    <string name="widgetSettingsContentAlphaLabel">Content Transparency</string>
    <string name="widgetSettingsCornerCurveLabel">Corner Curve</string>
    <string name="widgetSettingsCornerCurveWarning">Corner Curve Warning</string>
    <string name="widgetSettingsTextEmpty">Add a widget to your home screen\nto get started.</string>

    <string name="space">___________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________</string>

    <string name="widgetTitle">Widget Settings</string>
    <string name="widgetTextEmpty">Tap here to choose a note.</string>
    <string name="widgetTextLoading">Loading widget…</string>
    <string name="widgetTextLocked">Note Locked</string>
    <string name="widgetDescription">Keep your friends close. Keep your notes closer.</string>
    <string name="widgetPreviewTitle">Note Title</string>
    <string name="widgetPreviewText">• List Item #1\n• List Item #2\n• List Item #3\n• List Item #4\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>

</resources>
