<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/option_lock"
        android:orderInCategory="100"
        android:title="@string/toolbarOptionLock"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/option_unlock"
        android:orderInCategory="200"
        android:title="@string/toolbarOptionUnlock"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/option_export"
        android:orderInCategory="300"
        android:title="@string/toolbarOptionExport"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/option_delete"
        android:orderInCategory="400"
        android:title="@string/toolbarOptionDelete"
        app:showAsAction="never"
        />

</menu>