<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialogMargin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/paddingMedium"
        android:paddingBottom="@dimen/dialogOptionPadding"
        android:background="@drawable/dialog_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="true"
        android:focusable="true"
        >

        <TextView
            android:id="@+id/textNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="?dialogPreferredPadding"
            android:paddingEnd="?dialogPreferredPadding"
            android:paddingTop="@dimen/paddingActivity"
            android:paddingBottom="@dimen/paddingActivity"
            android:textSize="@dimen/textNoteOptionsTitle"
            android:textColor="?themeTextPrimary"
            tools:text="@string/noteOptionsTitle"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="@dimen/paddingMedium"
            app:dividerColor="?themeDivider"
            />

        <TextView
            android:id="@+id/textNoteOptionsLock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialogOptionPadding"
            android:layout_marginEnd="@dimen/dialogOptionPadding"
            android:paddingStart="@dimen/dialogOptionPadding"
            android:paddingEnd="@dimen/dialogOptionPadding"
            android:paddingTop="@dimen/dialogOptionPadding"
            android:paddingBottom="@dimen/dialogOptionPadding"
            android:drawablePadding="@dimen/paddingActivity"
            android:textSize="@dimen/textNoteOptions"
            android:textColor="?themeTextSecondary"
            android:text="@string/noteOptionsLock"
            android:background="@drawable/ripple_dialog_list_item"
            app:drawableStartCompat="@drawable/icon_lock_large" />

        <TextView
            android:id="@+id/textNoteOptionsUnlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialogOptionPadding"
            android:layout_marginEnd="@dimen/dialogOptionPadding"
            android:paddingStart="@dimen/dialogOptionPadding"
            android:paddingEnd="@dimen/dialogOptionPadding"
            android:paddingTop="@dimen/dialogOptionPadding"
            android:paddingBottom="@dimen/dialogOptionPadding"
            android:drawablePadding="@dimen/paddingActivity"
            android:textSize="@dimen/textNoteOptions"
            android:textColor="?themeTextSecondary"
            android:text="@string/noteOptionsUnlock"
            android:background="@drawable/ripple_dialog_list_item"
            app:drawableStartCompat="@drawable/icon_unlock_large" />

        <TextView
            android:id="@+id/textNoteOptionsImport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialogOptionPadding"
            android:layout_marginEnd="@dimen/dialogOptionPadding"
            android:paddingStart="@dimen/dialogOptionPadding"
            android:paddingEnd="@dimen/dialogOptionPadding"
            android:paddingTop="@dimen/dialogOptionPadding"
            android:paddingBottom="@dimen/dialogOptionPadding"
            android:drawablePadding="@dimen/paddingActivity"
            android:textSize="@dimen/textNoteOptions"
            android:textColor="?themeTextSecondary"
            android:text="@string/noteOptionsImport"
            android:background="@drawable/ripple_dialog_list_item"
            app:drawableStartCompat="@drawable/icon_import"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textNoteOptionsExport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialogOptionPadding"
            android:layout_marginEnd="@dimen/dialogOptionPadding"
            android:paddingStart="@dimen/dialogOptionPadding"
            android:paddingEnd="@dimen/dialogOptionPadding"
            android:paddingTop="@dimen/dialogOptionPadding"
            android:paddingBottom="@dimen/dialogOptionPadding"
            android:drawablePadding="@dimen/paddingActivity"
            android:textSize="@dimen/textNoteOptions"
            android:textColor="?themeTextSecondary"
            android:text="@string/noteOptionsExport"
            android:background="@drawable/ripple_dialog_list_item"
            app:drawableStartCompat="@drawable/icon_upload" />

        <TextView
            android:id="@+id/textNoteOptionsOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialogOptionPadding"
            android:layout_marginEnd="@dimen/dialogOptionPadding"
            android:paddingStart="@dimen/dialogOptionPadding"
            android:paddingEnd="@dimen/dialogOptionPadding"
            android:paddingTop="@dimen/dialogOptionPadding"
            android:paddingBottom="@dimen/dialogOptionPadding"
            android:drawablePadding="@dimen/paddingActivity"
            android:textSize="@dimen/textNoteOptions"
            android:textColor="?themeTextSecondary"
            android:text="@string/noteOptionsOpen"
            android:background="@drawable/ripple_dialog_list_item"
            app:drawableStartCompat="@drawable/icon_edit"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textNoteOptionsRestore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialogOptionPadding"
            android:layout_marginEnd="@dimen/dialogOptionPadding"
            android:paddingStart="@dimen/dialogOptionPadding"
            android:paddingEnd="@dimen/dialogOptionPadding"
            android:paddingTop="@dimen/dialogOptionPadding"
            android:paddingBottom="@dimen/dialogOptionPadding"
            android:drawablePadding="@dimen/paddingActivity"
            android:textSize="@dimen/textNoteOptions"
            android:textColor="?themeTextSecondary"
            android:text="@string/noteOptionsRestore"
            android:background="@drawable/ripple_dialog_list_item"
            app:drawableStartCompat="@drawable/icon_restore"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/textNoteOptionsArchive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialogOptionPadding"
            android:layout_marginEnd="@dimen/dialogOptionPadding"
            android:paddingStart="@dimen/dialogOptionPadding"
            android:paddingEnd="@dimen/dialogOptionPadding"
            android:paddingTop="@dimen/dialogOptionPadding"
            android:paddingBottom="@dimen/dialogOptionPadding"
            android:drawablePadding="@dimen/paddingActivity"
            android:textSize="@dimen/textNoteOptions"
            android:textColor="?themeTextSecondary"
            android:text="@string/noteOptionsArchive"
            android:background="@drawable/ripple_dialog_list_item"
            app:drawableStartCompat="@drawable/icon_archive_large"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/textNoteOptionsDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialogOptionPadding"
            android:layout_marginEnd="@dimen/dialogOptionPadding"
            android:paddingStart="@dimen/dialogOptionPadding"
            android:paddingEnd="@dimen/dialogOptionPadding"
            android:paddingTop="@dimen/dialogOptionPadding"
            android:paddingBottom="@dimen/dialogOptionPadding"
            android:drawablePadding="@dimen/paddingActivity"
            android:textSize="@dimen/textNoteOptions"
            android:textColor="?themeTextSecondary"
            android:text="@string/noteOptionsDelete"
            android:background="@drawable/ripple_dialog_list_item"
            app:drawableStartCompat="@drawable/icon_delete" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>