<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?themeBackground"
    >

    <TextView
        android:id="@+id/textAboutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutHeader"
        android:textColor="?themeTextSecondary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3"
        />

    <TextView
        android:id="@+id/textAboutAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutAuthor"
        android:textColor="?themeTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAboutHeader"
        />

    <TextView
        android:id="@+id/textAboutVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutVersion"
        android:textColor="?themeTextTertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAboutAuthor"
        />

    <TextView
        android:id="@+id/textAboutDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingStart="@dimen/paddingHuge"
        android:paddingTop="@dimen/paddingLarge"
        android:paddingEnd="@dimen/paddingHuge"
        android:text="@string/aboutDescription"
        android:textColor="?themeTextSecondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAboutVersion"
        app:layout_constraintVertical_bias=".15"
        />

</androidx.constraintlayout.widget.ConstraintLayout>